Fix area spacing and only show teams if there are areas to show

--- a/src/styles/components/_c-area-card.scss
+++ b/src/styles/components/_c-area-card.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 50px;
 
   .area-image {
     height: 155px;
